--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "eslint-config-next": "13.1.5",
     "framer-motion": "^8.5.2",
     "next": "13.1.5",
+    "node-mailjet": "^6.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
