--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "dev.paczesny.pl",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "^2.0.13",
-    "@next/font": "13.1.5",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.5",
-    "framer-motion": "^8.5.2",
-    "next": "13.1.5",
-    "node-mailjet": "^6.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-toastify": "^9.1.1",
-    "typescript": "4.9.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
-  }
+    "name": "dev.paczesny.pl",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@headlessui/react": "^1.7.7",
+        "@heroicons/react": "^2.0.13",
+        "@next/font": "13.1.5",
+        "@types/node": "18.11.18",
+        "@types/react": "18.0.27",
+        "@types/react-dom": "18.0.10",
+        "eslint": "8.32.0",
+        "eslint-config-next": "13.1.5",
+        "framer-motion": "^8.5.2",
+        "mailgun-js": "^0.22.0",
+        "next": "13.1.5",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-toastify": "^9.1.1",
+        "typescript": "4.9.4"
+    },
+    "devDependencies": {
+        "@types/mailgun-js": "^0.22.13",
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.4"
+    }
 }
