--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,19 @@
-name: Deploy Website
+name: Deploy Portfolio to the server.
 
 on:
-  push:
-    branches:
-      - main
+    # Runs on pushes targeting the default branch
+    push:
+        branches: ["main"]
+
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Set up SSH key
         uses: webfactory/ssh-agent@v0.5.0
@@ -22,7 +25,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          port: ${{ secrets.PORT }}
+          port: 21
           password: ${{ secrets.PASSWORD }}
           script: |
             cd /home/j5on/portfolio
