--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "framer-motion": "^8.5.2",
         "mailgun-js": "^0.22.0",
         "next": "13.1.5",
+        "node-fetch": "^3.3.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-toastify": "^9.1.1",
