--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@analytics/google-analytics": "^1.0.5",
         "@headlessui/react": "^1.7.7",
         "@heroicons/react": "^2.0.13",
         "@next/font": "13.1.5",
         "@types/node": "18.11.18",
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
+        "analytics": "^0.8.1",
         "axios": "^1.3.4",
         "eslint": "8.32.0",
         "eslint-config-next": "13.1.5",
