--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "mailgun-js": "^0.22.0",
         "next": "13.1.5",
         "next-auth": "^4.20.1",
+        "next-sanity": "^4.1.7",
         "nextjs-google-analytics": "^2.3.3",
         "node-fetch": "^3.3.1",
         "react": "18.2.0",
