--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@headlessui/react": "^1.7.7",
         "@heroicons/react": "^2.0.13",
         "@next/font": "13.1.5",
+        "@sanity/image-url": "^1.0.2",
         "@types/node": "18.11.18",
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
