--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
         "node-fetch": "^3.3.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-google-recaptcha": "^2.1.0",
         "react-toastify": "^9.1.1",
         "typescript": "4.9.4"
     },
     "devDependencies": {
         "@types/mailgun-js": "^0.22.13",
+        "@types/react-google-recaptcha": "^2.1.5",
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.21",
         "tailwindcss": "^3.2.4"
