--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@nextui-org/react": "^2.2.9",
         "@react-aria/ssr": "^3.9.1",
         "@react-aria/visually-hidden": "^3.8.8",
+        "@supabase/auth-helpers-nextjs": "^0.9.0",
         "@supabase/ssr": "^0.0.10",
         "@supabase/supabase-js": "^2.39.3",
         "clsx": "^2.1.0",
