--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "dependencies": {
         "@nextui-org/accordion": "^2.0.28",
         "@nextui-org/button": "^2.0.26",
+        "@nextui-org/chip": "^2.0.28",
         "@nextui-org/input": "^2.1.16",
         "@nextui-org/link": "^2.0.26",
+        "@nextui-org/modal": "^2.0.33",
         "@nextui-org/navbar": "^2.0.27",
         "@nextui-org/react": "^2.2.9",
+        "@nextui-org/select": "^2.1.27",
+        "@nextui-org/system": "^2.1.2",
+        "@nextui-org/theme": "^2.2.3",
         "@react-aria/ssr": "^3.9.1",
         "@react-aria/visually-hidden": "^3.8.8",
         "@supabase/auth-helpers-nextjs": "^0.9.0",
