--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@internationalized/date": "^3.5.3",
         "@nextui-org/accordion": "^2.0.28",
         "@nextui-org/button": "^2.0.26",
         "@nextui-org/chip": "^2.0.28",
+        "@nextui-org/date-picker": "^2.0.7",
         "@nextui-org/input": "^2.1.16",
         "@nextui-org/link": "^2.0.26",
         "@nextui-org/modal": "^2.0.33",
