--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY="public-anon-key"
 
 SUPABASE_AUTH_GITHUB_CLIENT_ID="your-github-client-id"
 SUPABASE_AUTH_GITHUB_SECRET="your-github-secret"
+
+NEXT_PUBLIC_GOOGLE_ANALYTICS_ID="your-google-analytics-id"
