--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@supabase/auth-helpers-nextjs": "^0.9.0",
         "@supabase/ssr": "^0.0.10",
         "@supabase/supabase-js": "^2.39.3",
+        "@vercel/analytics": "^1.2.2",
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.3",
         "lucide-react": "^0.316.0",
