Fix: auth redirect

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+
 NEXT_PUBLIC_SUPABASE_URL="https://<projectID>.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="public-anon-key"
 
