Add: Analytics page for dashboard

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ SUPABASE_AUTH_GITHUB_CLIENT_ID="your-github-client-id"
 SUPABASE_AUTH_GITHUB_SECRET="your-github-secret"
 
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID="your-google-analytics-id"
+
+NEXT_PUBLIC_GA_CLIENT_EMAIL="client-email@gmail.com"
+NEXT_PUBLIC_GA_PRIVATE_KEY="very-secret-private-key-for-google-analytics"
+NEXT_PUBLIC_GA_PROJECT_ID="your-ga-project-id"
