--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@google-analytics/data": "^4.5.0",
         "@internationalized/date": "^3.5.3",
         "@next/third-parties": "^14.2.3",
         "@nextui-org/accordion": "^2.0.28",
         "@nextui-org/button": "^2.0.26",
+        "@nextui-org/card": "^2.0.28",
         "@nextui-org/chip": "^2.0.28",
         "@nextui-org/date-picker": "^2.0.7",
         "@nextui-org/input": "^2.1.16",
         "@nextui-org/link": "^2.0.26",
         "@nextui-org/modal": "^2.0.33",
         "@nextui-org/navbar": "^2.0.27",
-        "@nextui-org/react": "^2.2.9",
+        "@nextui-org/react": "^2.3.6",
         "@nextui-org/select": "^2.1.27",
         "@nextui-org/system": "^2.1.2",
+        "@nextui-org/table": "^2.0.33",
         "@nextui-org/tabs": "^2.0.29",
         "@nextui-org/theme": "^2.2.3",
         "@react-aria/ssr": "^3.9.1",
@@ -31,15 +34,19 @@
         "@supabase/supabase-js": "^2.39.3",
         "@vercel/analytics": "^1.2.2",
         "clsx": "^2.1.0",
+        "country-list": "^2.3.0",
         "framer-motion": "^11.0.3",
         "lucide-react": "^0.316.0",
         "next": "14.2.3",
         "next-themes": "^0.2.1",
         "react": "^18.2.0",
+        "react-country-flag": "^3.1.0",
         "react-dom": "^18.2.0",
+        "request": "^2.88.2",
         "tailwind-merge": "^2.2.1"
     },
     "devDependencies": {
+        "@types/country-list": "^2.1.4",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
