--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@supabase/ssr": "^0.0.10",
         "@supabase/supabase-js": "^2.39.3",
         "@vercel/analytics": "^1.2.2",
+        "@vercel/speed-insights": "^1.0.10",
         "clsx": "^2.1.0",
         "country-list": "^2.3.0",
         "framer-motion": "^11.0.3",
