chore: Update Google Analytics credentials and refactor analytics route

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ SUPABASE_AUTH_GITHUB_SECRET="your-github-secret"
 
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID="your-google-analytics-id"
 
-NEXT_PUBLIC_GA_CLIENT_EMAIL="client-email@gmail.com"
-NEXT_PUBLIC_GA_PRIVATE_KEY="very-secret-private-key-for-google-analytics"
-NEXT_PUBLIC_GA_PROJECT_ID="your-ga-project-id"
+NEXT_PUBLIC_GA_PROJECT_ID=""
+NEXT_PUBLIC_GA_PRIVATE_KEY_ID=""
+NEXT_PUBLIC_GA_PRIVATE_KEY=""
+NEXT_PUBLIC_GA_CLIENT_EMAIL=""
+NEXT_PUBLIC_GA_CLIENT_ID=""
+NEXT_PUBLIC_GA_UNIVERSE_DOMAIN="googleapis.com"
