--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react": "^18.2.0",
         "react-country-flag": "^3.1.0",
         "react-dom": "^18.2.0",
+        "recharts": "^2.12.7",
         "request": "^2.88.2",
         "tailwind-merge": "^2.2.1"
     },
