--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@supabase/auth-helpers-nextjs": "^0.9.0",
         "@supabase/ssr": "^0.0.10",
         "@supabase/supabase-js": "^2.39.3",
+        "@tanstack/react-query": "^5.36.2",
         "@vercel/analytics": "^1.2.2",
         "@vercel/speed-insights": "^1.0.10",
         "clsx": "^2.1.0",
