--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
         "framer-motion": "^11.0.3",
         "lucide-react": "^0.316.0",
         "next": "14.2.3",
+        "next-plausible": "^3.12.0",
         "next-themes": "^0.2.1",
-        "react": "^18.2.0",
+        "react": "18.3.1",
         "react-country-flag": "^3.1.0",
-        "react-dom": "^18.2.0",
+        "react-dom": "18.3.1",
         "recharts": "^2.12.7",
         "request": "^2.88.2",
         "tailwind-merge": "^2.2.1"
