--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "next": "14.2.3",
         "next-plausible": "^3.12.0",
         "next-themes": "^0.2.1",
+        "randomcolor": "^0.6.2",
         "react": "18.3.1",
         "react-country-flag": "^3.1.0",
         "react-dom": "18.3.1",
