--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "devDependencies": {
         "@types/country-list": "^2.1.4",
         "@types/node": "^20",
+        "@types/randomcolor": "^0.5.9",
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "autoprefixer": "^10.0.1",
