--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@google-analytics/data": "^4.5.0",
+        "@headlessui/react": "^2.0.4",
         "@internationalized/date": "^3.5.3",
         "@next/third-parties": "^14.2.3",
         "@nextui-org/accordion": "^2.0.28",
