--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
         "next": "14.2.3",
         "next-plausible": "^3.12.0",
         "next-themes": "^0.2.1",
-        "prettier-plugin-tailwindcss": "^0.6.1",
         "randomcolor": "^0.6.2",
         "react": "18.3.1",
         "react-country-flag": "^3.1.0",
@@ -62,6 +61,8 @@
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
         "postcss": "^8",
+        "prettier": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.6.1",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
     }
