--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/node": "20.5.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.15",
     "cheerio": "1.0.0-rc.12",
     "clsx": "^2.0.0",
