--- a/package.json
+++ b/package.json
@@ -12,31 +12,40 @@
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.3.0",
     "@next/mdx": "^13.4.19",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "^0.4.0",
     "@tabler/icons-react": "^2.32.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.5.3",
     "@types/react": "18.2.21",
+    "@types/react-day-picker": "^5.3.0",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.15",
     "cheerio": "1.0.0-rc.12",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^11.3.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "postcss": "8.4.28",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prismjs": "^1.29.0",
     "react": "18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-github-calendar": "^4.1.6",
     "remark-gfm": "^3.0.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.5.3"
   },
   "devDependencies": {
