--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.4.4",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.5.3"
+    "typescript": "5.5.3",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.6"
