--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-github-calendar": "^4.1.6",
+    "recharts": "^2.12.7",
     "remark-gfm": "^3.0.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.4.4",
