--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
             "@ui/*": ["./src/components/ui/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "public/analytics.js"
+    ],
     "exclude": ["node_modules"]
 }
