--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sanity/client": "^6.22.2",
+    "@sanity/icons": "^3.4.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.61.0",
     "@supabase/ssr": "^0.4.0",
     "@tabler/icons-react": "^2.32.0",
     "@tailwindcss/typography": "^0.5.9",
@@ -38,6 +42,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "next-sanity": "^9.5.5",
     "postcss": "8.4.28",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prismjs": "^1.29.0",
@@ -47,6 +52,8 @@
     "react-github-calendar": "^4.1.6",
     "recharts": "^2.12.7",
     "remark-gfm": "^3.0.1",
+    "sanity": "^3.61.0",
+    "styled-components": "^6.1.13",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.4.4",
     "tailwindcss-animate": "^1.0.7",
